@@ -631,7 +631,7 @@ main(int argc,char **argv)
     nco_exit(EXIT_SUCCESS);
   } /* end if PRN_FNC_TBL */
   
-  /* Process positional arguments and fill in filenames */
+  /* Process positional arguments and fill-in filenames */
   fl_lst_in=nco_fl_lst_mk(argv,argc,optind,&fl_nbr,&fl_out,&FL_LST_IN_FROM_STDIN);
   
   /* Make uniform list of user-specified chunksizes */
