@@ -611,7 +611,7 @@ main(int argc,char **argv)
     fl_out_fmt=NC_FORMAT_NETCDF4; 
   } /* !GROUP_AGGREGATE */
 
-  /* Process positional arguments and fill in filenames */
+  /* Process positional arguments and fill-in filenames */
   fl_lst_in=nco_fl_lst_mk(argv,argc,optind,&fl_nbr,&fl_out,&FL_LST_IN_FROM_STDIN);
 
   /* Parse filename */
