@@ -381,7 +381,7 @@ nco_pck_plc_typ_get /* [fnc] Determine type, if any, to pack input type to */
     break;
   } /* end nco_pck_map switch */ 
   
-  /* Only fill in nc_typ_pck_out if it is non-NULL */
+  /* Only fill-in nc_typ_pck_out if it is non-NULL */
   if(nc_typ_pck_out) *nc_typ_pck_out=nc_typ_pck_out_tmp;
   
   return nco_pck_plc_alw; /* O [flg] Packing policy allows packing nc_typ_in */
