@@ -1,3 +1,7 @@
+2018-02-15  Charlie Zender  <zender@uci.edu>
+
+	* Add 'bilin' and 'aave' as synonyms to 'bilinear' and 'conserve', respectively
+
 2018-02-14  Charlie Zender  <zender@uci.edu>
 
 	* Fix compiler warnings when nc_set_log_level() is #undef'd
